--- a/vs-production/Assembly-CSharp.csproj
+++ b/vs-production/Assembly-CSharp.csproj
@@ -53,6 +53,7 @@
     </Reference>
   </ItemGroup>
   <ItemGroup>
+     <Compile Include="Assets\Scriptables\Stats.cs" />
      <Compile Include="Assets\Scripts\CameraController.cs" />
      <Compile Include="Assets\Scripts\CombatSystemManager.cs" />
      <Compile Include="Assets\Scripts\Command.cs" />
